--- a/kitchen/makefile
+++ b/kitchen/makefile
@@ -1,3 +1,3 @@
 pathtracer: src/pathtracer.cpp
-	/usr/bin/gcc -g -o pt src/pathtracer.cpp
+	/usr/bin/gcc -lm -g -o pt src/pathtracer.cpp
 	./pt > test.ppm
