--- a/livingroom/makefile
+++ b/livingroom/makefile
@@ -1,2 +1,3 @@
-pathtracer: src/raystack.cpp
-	/usr/bin/gcc -g -o pt src/raystack.cpp
+pathtracer: src/pathtracer.cpp
+	/usr/bin/gcc -lm -g -o pt src/pathtracer.cpp
+	./pt > test.ppm
